deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: custom-frontend
spec:
  replicas: 3
  selector:
    matchLabels:
      app: coolest
  template:
    metadata:
      labels:
        app: coolest
    spec:
      containers:
      - name: nginx
        image: thecoolestmalak/coolest-nginx
