mongoexpress-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongo-express-service
  namespace: mongo-express
spec:
  type: NodePort
  selector:
    app: mongo-express
  ports:
    - port: 8089
      targetPort: 8089
      nodePort: 30081
